# File-Retreival-Engine-V3

./: README.md
app-cpp/: CMakeLists.txt  serverMessages.pb.cc  serverMessages.pb.h  serverMessages.proto
app-cpp/include/: ClientProcessingEngine.hpp  IndexStore.hpp  ServerProcessingEngine.hpp
app-cpp/src/: ClientAppInterface.cpp  ClientProcessingEngine.cpp  IndexStore.cpp  ServerAppInterface.cpp  ServerProcessingEngine.cpp  file-retrieval-benchmark.cpp  file-retrieval-server.cpp
app-java/src/main/java/csc435/app/: ServerAppInterface.java
